[gd_scene load_steps=4 format=3 uid="uid://drxm4k7p5qw8v"]

[ext_resource type="Script" uid="uid://civi7lspfjucj" path="res://scripts/silence_enemy.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(28, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 251.12746

[node name="SilenceEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1")

[node name="Sprite2D" type="Node2D" parent="."]

[node name="Silhouette" type="Polygon2D" parent="Sprite2D"]
color = Color(0.08, 0.08, 0.12, 0.95)
polygon = PackedVector2Array(-10, -25, 10, -25, 12, -15, 14, 10, 10, 20, 8, 28, -8, 28, -10, 20, -14, 10, -12, -15)

[node name="Head" type="Polygon2D" parent="Sprite2D"]
position = Vector2(0, -30)
color = Color(0.05, 0.05, 0.1, 1)
polygon = PackedVector2Array(-7, -8, 7, -8, 8, 5, 5, 8, -5, 8, -8, 5)

[node name="LeftArm" type="Polygon2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-14, -12)
color = Color(0.06, 0.06, 0.11, 0.9)
polygon = PackedVector2Array(-3, 0, 3, 0, 4, 18, 2, 20, -2, 20, -4, 18)

[node name="RightArm" type="Polygon2D" parent="Sprite2D"]
z_index = -1
position = Vector2(14, -12)
color = Color(0.06, 0.06, 0.11, 0.9)
polygon = PackedVector2Array(-3, 0, 3, 0, 4, 18, 2, 20, -2, 20, -4, 18)

[node name="LeftLeg" type="Polygon2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-6, 20)
color = Color(0.05, 0.05, 0.1, 0.95)
polygon = PackedVector2Array(-3, 0, 3, 0, 3, 8, -3, 8)

[node name="RightLeg" type="Polygon2D" parent="Sprite2D"]
z_index = -1
position = Vector2(6, 20)
color = Color(0.05, 0.05, 0.1, 0.95)
polygon = PackedVector2Array(-3, 0, 3, 0, 3, 8, -3, 8)

[node name="Eyes" type="Node2D" parent="Sprite2D"]
position = Vector2(0, -30)

[node name="EyeLeft" type="Polygon2D" parent="Sprite2D/Eyes"]
position = Vector2(-4, 0)
color = Color(1, 0.1, 0.1, 1)
polygon = PackedVector2Array(-2, -3, 2, -3, 3, 0, 2, 3, -2, 3, -3, 0)

[node name="EyeGlowLeft" type="Polygon2D" parent="Sprite2D/Eyes/EyeLeft"]
color = Color(1, 0.3, 0.3, 0.6)
polygon = PackedVector2Array(-3, -4, 3, -4, 4, 0, 3, 4, -3, 4, -4, 0)

[node name="EyeRight" type="Polygon2D" parent="Sprite2D/Eyes"]
position = Vector2(4, 0)
color = Color(1, 0.1, 0.1, 1)
polygon = PackedVector2Array(-2, -3, 2, -3, 3, 0, 2, 3, -2, 3, -3, 0)

[node name="EyeGlowRight" type="Polygon2D" parent="Sprite2D/Eyes/EyeRight"]
color = Color(1, 0.3, 0.3, 0.6)
polygon = PackedVector2Array(-3, -4, 3, -4, 4, 0, 3, 4, -3, 4, -4, 0)

[node name="Aura" type="CPUParticles2D" parent="Sprite2D"]
amount = 10
lifetime = 2.0
preprocess = 1.0
speed_scale = 0.5
explosiveness = 0.1
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, -20)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 3.0
scale_amount_max = 6.0
color = Color(0.1, 0.1, 0.15, 0.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-25, 35)
target_position = Vector2(0, 20)

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(25, 35)
target_position = Vector2(0, 20)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="HealthBarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -42.0

[node name="Background" type="ColorRect" parent="HealthBarContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 8.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 8.0
max_value = 30.0
value = 30.0
show_percentage = false
